# fermulerpy

./: AUTHORS  CONTRIBUTING.rst  LICENSE  README.rst  requirements_dev.txt  setup.cfg
.github/workflows/: python-package.yml
LOGO-master/LOGO-master/Code/: logo_generate.py  logo_with_text.py
docs/source/: background_and_motivation.rst  conclusion.rst  conf.py  getting_started.rst  index.rst  jupyter.rst  literature_review.rst  plan_of_work.rst  results.rst
docs/source/api/: index.rst
docs/source/api/analytic/: analytic_index.rst  arithmetic_fundamental.rst  arithmetic_periodic.rst  arithmetical_functions.rst  function_average.rst  reimann.rst
docs/source/api/elementary/: congruences.rst  decimals.rst  divisors.rst  elementary_index.rst  euler.rst  factorization.rst  fermat_and_wilson.rst  integers.rst  linear_congruences.rst  linear_diophantine.rst  other_bases.rst  perfect_numbers.rst  primitive.rst  pythagorean_triangles.rst  quadratic_congruence.rst  sum_2_squares.rst
docs/source/notebooks/: Computations With Divisors.ipynb  Computations With Prime Numbers.ipynb
src/fermulerpy/: __init__.py
src/fermulerpy/analytic/: __init__.py  arithmetic_fundamental.py  arithmetic_periodic.py  arithmetical_functions.py  dirichlet.py  function_average.py  partitions.py  prime_distribution.py  quadratic_residue.py  riemann.py
src/fermulerpy/combinatorics/: __init__.py  advanced.py  basic.py
src/fermulerpy/constants/: __init__.py  useful_series.py
src/fermulerpy/elementary/: __init__.py  congruences.py  decimals.py  divisors.py  euler.py  factorization.py  fermat_and_wilson.py  integers.py  linear_congruences.py  linear_diophantine.py  other_bases.py  perfect_numbers.py  primitive.py  pythagorean_triangles.py  quadratic_congruence.py  sum_2_squares.py
src/fermulerpy/utils/: __init__.py  primeComp.py
tests/test_algebraic/: f.py
tests/test_constants/: test_useful_series.py
tests/test_elementary/: test_congruences.py  test_decimals.py  test_divisors.py  test_euler.py  test_factorization.py  test_fermat_and_wilson.py  test_integers.py  test_linear_congruences.py  test_linear_diophantine.py  test_other_bases.py  test_perfect_numbers.py  test_primitive.py  test_pythagorean_triangles.py  test_quadratic_congruence.py  test_sum_2_squares.py
