[metadata]
name = fermulerpy
version = 0.1.v10
author = MAG-BOSS
author_email = b18025@students.iitmandi.ac.in
license = MIT
description = Python package for Number Theory
keywords =
    number theory
    analytic number theory
    probabilistic number theory
    deophantine
url = https://github.com/MAG-BOSS/fermulerpy
download_url = https://github.com/MAG-BOSS/fermulerpy
long_description = hello
classifiers =
        Development Status :: 1 - Beta
        Intended Audience :: Education
        Intended Audience :: Mathematics/Research
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Topic :: Mathematics/Engineering
        Topic :: Scientific/Engineering :: Mathematics
        Topic :: Scientific/Engineering :: Number Theory

[options]
package_dir =
    = src
packages = find:
zip_safe = False
install_requires =
        numpy
        mpmath
include_package_data = True
python_requires = >=3.6

[options.packages.find]
where = src